<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/input_c"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:inputType="number"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/pytheo"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:text="@string/baseInput"/>
    <EditText
            android:id="@+id/input_b"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:inputType="number"
            android:text="@string/baseInput"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/pytheo"
            app:layout_constraintStart_toEndOf="@+id/textB2" android:layout_marginStart="24dp"/>
    <EditText
            android:id="@+id/input_a"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:inputType="number"
            android:text="@string/baseInput"
            app:layout_constraintStart_toEndOf="@+id/textA" android:layout_marginStart="8dp"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/pytheo"/>
    <TextView
            android:text="@string/pythagTheorem"
            android:layout_width="351dp"
            android:layout_height="84dp"
            android:id="@+id/pytheo" android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>
    <TextView
            android:layout_width="213dp"
            android:layout_height="60dp"
            android:id="@+id/output"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="120dp" app:layout_constraintTop_toBottomOf="@+id/input_b"
    />
    <Button
            android:text="@string/close"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:id="@+id/close"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="closeApp"/>
    <Button
            android:text="@string/clear"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:id="@+id/clear"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/input_c"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/output"
            app:layout_constraintStart_toEndOf="@+id/calc" android:layout_marginStart="24dp"
            android:onClick="clearButton"/>
    <Button
            android:text="@string/calc"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:id="@+id/calc"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/input_a"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/output"
            android:onClick="getNumericInput"/>
    <TextView
            android:text="@string/inputC"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/textC"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/pytheo" app:layout_constraintEnd_toStartOf="@+id/input_c"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/equals"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/equals"
            app:layout_constraintStart_toEndOf="@+id/input_b"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toStartOf="@+id/textC"
            android:layout_marginEnd="24dp" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/pytheo"/>
    <TextView
            android:text="@string/inputB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/textB2"
            app:layout_constraintStart_toEndOf="@+id/input_a"
            android:layout_marginStart="24dp" android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/pytheo"/>
    <TextView
            android:text="@string/inputA"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/textA" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/pytheo"/>
    <TextView
            android:text="@string/output"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toBottomOf="@+id/input_a" app:layout_constraintEnd_toStartOf="@+id/output"
            android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>